# cybersentinel-ai-dashboard

./: Dockerfile  LICENSE  README.md  index.html  inference.py  metadata.json  openenv.yaml  package-lock.json  package.json  pyproject.toml  server.ts  validate-submission.sh
backend/: environment.py  models.py
backend/graders/: grader_easy.py  grader_hard.py  grader_medium.py
backend/tasks/: medium.py
cybersentinel-ai-dashboard/: inference.py  pyproject.toml  requirements.txt
cybersentinel-ai-dashboard/backend/: main.py  test_grader.py
cybersentinel-ai-dashboard/backend/graders/: grader_easy.py
cybersentinel-ai-dashboard/backend/tasks/: easy.py  hard.py  medium.py
server/: app.py
src/: App.tsx  index.css  types.ts
src/components/: AIPanel.tsx  AlertsPanel.tsx  ConfirmationModal.tsx  CyberBackground.tsx  LoadingScreen.tsx  MetricsPanel.tsx  Navbar.tsx  ScorePanel.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBadge.tsx  TerminalPanel.tsx
